Created Organiser class and updated AuthController and AuthService